@@ -1,3 +1,6 @@
+* Thu Jan 05 2017 Nick Miller <nick.miller@onyxpoint.com> - 5.0.1-0
+- Added feature to add sudo::user_specification resources from hiera
+
 * Wed Jan 04 2017 Nick Miller <nick.miller@onyxpoint.com> - 5.0.1-0
 - Strong typed module
 - Updated for Puppet 4
